--- a/cv/summary.tex
+++ b/cv/summary.tex
@@ -12,7 +12,7 @@
 %---------------------------------------------------------
 % My research focuses on developing fast and accurate algorithms for  optimal transport and the implementations to solve PDEs and real-world problems arising in image processing and machine learning.
 
-My research focuses on developing fast and accurate machine learning algorithms and understanding the algorithms using tools of partial differential equations (PDE).
+My research focuses on developing partial differential equations (PDE)-based algorithms to solve high-dimensional machine learning problems and analyze the theoretical properties of the algorithms.
 
 Machine learning, optimization, optimal transport, mean field games, gradient flows.
 
