--- a/resume.tex
+++ b/resume.tex
@@ -61,7 +61,7 @@
 % \googlescholar{googlescholar-id}{name-to-display}
 % \firstname and \lastname will be used
 \googlescholar{https://scholar.google.com/citations?user=fa6XeLsAAAAJ&hl=en}{Google Scholar}
-\extrainfo{US Citizen}
+% \extrainfo{US Citizen}
 
 % \quote{``Simplicity is deceptively complicated."}
 
