--- a/cv/presentations.tex
+++ b/cv/presentations.tex
@@ -11,6 +11,18 @@
 \begin{cvtalks}
 
 %---------------------------------------------------------
+\cvtalk
+    {Workshop on kinetic and optimal transport} % Seminar
+    {Deep JKO for general gradien flows.} % talk subject
+    {2023} % Date(s)
+  \cvtalk
+    {2023 Algorithms for Threat Detection PI Workshop} % Seminar
+    {Monotone generative modeling via Gromov-Monge Embedding.} % talk subject
+    {2023} % Date(s)
+  \cvtalk
+    {SIAM Conference on Computational Science and Engineering (CSE23)} % Seminar
+    {Monotone discretizations of levelset convex geometric PDEs.} % talk subject
+    {2023} % Date(s)
   \cvtalk
     {IMA Data Science Seminar, UMN} % Seminar
     {The back-forth method for Wasserstein gradient flows.} % talk subject
