--- a/cv/publications.tex
+++ b/cv/publications.tex
@@ -13,6 +13,8 @@
 % My research focuses on developing fast and accurate algorithms for  optimal transport and the implementations to solve PDEs and real-world problems arising in image processing and machine learning.
 \vspace{0.5cm}
 \begin{cvitems}
+  \item J. Calder, \textbf{W. Lee}, \href{https://arxiv.org/abs/2310.08450}{\textit{Monotone discretizations of levelset convex geometric PDEs}}, Preprint, 2023
+    \medskip
   \item \textbf{W. Lee}, S. Liu, W. Li, S. Osher, \href{https://arxiv.org/pdf/2104.11887.pdf}{\textit{Mean Field Control Problems For Vaccine Distribution}}, Research in the Mathematical Sciences, 2022
     \medskip
     \item W. Li, \textbf{W. Lee}, S. Osher, \href{https://arxiv.org/pdf/2107.11501.pdf}{\textit{Computation Mean-Field Information Dynamics Associated With Reaction Diffusion Equations}}, Journal of Computational Physics, 2022
