--- a/cv/presentations.tex
+++ b/cv/presentations.tex
@@ -16,8 +16,12 @@
     {Deep JKO for general gradien flows.} % talk subject
     {2023} % Date(s)
   \cvtalk
-    {2023 Algorithms for Threat Detection PI Workshop} % Seminar
+    {2023 Algorithms for Threat Detection PI Workshop (Poster session)} % Seminar
     {Monotone generative modeling via Gromov-Monge Embedding.} % talk subject
+    {2023} % Date(s)
+  \cvtalk
+    {The Level Set Collective II, UCLA} % Seminar
+    {Monotone discretizations of levelset convex geometric PDEs.} % talk subject
     {2023} % Date(s)
   \cvtalk
     {SIAM Conference on Computational Science and Engineering (CSE23)} % Seminar
