--- a/cv/presentations.tex
+++ b/cv/presentations.tex
@@ -11,6 +11,14 @@
 \begin{cvtalks}
 
 %---------------------------------------------------------
+% \cvtalk
+%     {Kernel Club, Colorado School of Mines} % Seminar
+%     {Monotone Generative Modeling via a Gromov-Monge Embedding.} % talk subject
+%     {2023} % Date(s)
+% \cvtalk
+%     {ACMD Seminar, National Institute of Standards and Technology (NIST)} % Seminar
+%     {Monotone Generative Modeling via a Gromov-Monge Embedding.} % talk subject
+%     {2023} % Date(s)
 \cvtalk
     {Workshop on kinetic and optimal transport} % Seminar
     {Deep JKO for general gradien flows.} % talk subject
@@ -27,10 +35,20 @@
     {SIAM Conference on Computational Science and Engineering (CSE23)} % Seminar
     {Monotone discretizations of levelset convex geometric PDEs.} % talk subject
     {2023} % Date(s)
+
   \cvtalk
     {IMA Data Science Seminar, UMN} % Seminar
     {The back-forth method for Wasserstein gradient flows.} % talk subject
     {2022} % Date(s)
+  
+\end{cvtalks}
+
+\vspace{-4mm}
+
+\begin{cvtalks}
+
+%---------------------------------------------------------
+
   \cvtalk
     {Optimal transport and Mean field games Seminar, University of South Carolina} % Seminar
     {Mean field control problems for vaccine distribution.} % talk subject
@@ -39,13 +57,6 @@
     {Current Literature in Applied Mathematics Seminar, UCLA} % Seminar
     {The back-forth method for Wasserstein gradient flows.} % talk subject
     {2021} % Date(s)
-\end{cvtalks}
-
-\vspace{-4mm}
-
-\begin{cvtalks}
-
-%---------------------------------------------------------
   \cvtalk
     {Optimal transport and Mean field games Seminar, University of South Carolina} % Seminar
     {The back-forth method for Wasserstein gradient flows.} % talk subject
