--- a/cv/education.tex
+++ b/cv/education.tex
@@ -18,7 +18,7 @@
     {
       \begin{cvitems} % Description(s) bullet points
         \item {\textbf{Advisor:} \href{https://www.math.ucla.edu/~sjo/}{Professor Stanley Osher}.}
-        \item {\textbf{Thesis:} Algorithms for optimal transport and their applications to PDEs.}
+        \item {\textbf{Thesis:} Algorithms For Optimal Transport And Their Applications To PDEs.}
       \end{cvitems}
     }
     
