--- a/cv/presentations.tex
+++ b/cv/presentations.tex
@@ -7,22 +7,27 @@
 %-------------------------------------------------------------------------------
 % CONTENT
 %-------------------------------------------------------------------------------
-
+\begingroup
+\allowdisplaybreaks
 \begin{cvtalks}
-
 %---------------------------------------------------------
 % \cvtalk
-%     {Kernel Club, Colorado School of Mines} % Seminar
+%     {A Monthly Seminar St The Inria Paris Mokaplan Research, Mokameeting} % Seminar
 %     {Monotone Generative Modeling via a Gromov-Monge Embedding.} % talk subject
 %     {2023} % Date(s)
-% \cvtalk
-%     {ACMD Seminar, National Institute of Standards and Technology (NIST)} % Seminar
-%     {Monotone Generative Modeling via a Gromov-Monge Embedding.} % talk subject
-%     {2023} % Date(s)
+\cvtalk
+    {Kernel Club, Colorado School of Mines} % Seminar
+    {Monotone Generative Modeling via a Gromov-Monge Embedding.} % talk subject
+    {2023} % Date(s)
+\cvtalk
+    {ACMD Seminar, National Institute of Standards and Technology (NIST)} % Seminar
+    {Monotone Generative Modeling via a Gromov-Monge Embedding.} % talk subject
+    {2023} % Date(s)
 \cvtalk
     {Workshop on kinetic and optimal transport} % Seminar
     {Deep JKO for general gradien flows.} % talk subject
     {2023} % Date(s)
+  \pagebreak
   \cvtalk
     {2023 Algorithms for Threat Detection PI Workshop (Poster session)} % Seminar
     {Monotone generative modeling via Gromov-Monge Embedding.} % talk subject
@@ -40,14 +45,6 @@
     {IMA Data Science Seminar, UMN} % Seminar
     {The back-forth method for Wasserstein gradient flows.} % talk subject
     {2022} % Date(s)
-  
-\end{cvtalks}
-
-\vspace{-4mm}
-
-\begin{cvtalks}
-
-%---------------------------------------------------------
 
   \cvtalk
     {Optimal transport and Mean field games Seminar, University of South Carolina} % Seminar
@@ -69,17 +66,10 @@
     {Optimal transport and Mean field games Seminar, UCLA} % Seminar
     {Tropical Wasserstein Distances in Phylogenetic Tree Space.} % talk subject
     {2019} % Date(s)
-    
-\end{cvtalks}
-
-\vspace{-4mm}
-
-\begin{cvtalks}
-
-%---------------------------------------------------------
-  \cvtalk
+    \cvtalk
     {Optimal transport and Mean field games Seminar, UCLA} % Seminar
     {Energy-efficient Velocity Control for Massive Rotary-Wing UAVs: A Mean Field Game Approach} % talk subject
     {2019} % Date(s)
 \end{cvtalks}
+\endgroup
 
