--- a/resume.tex
+++ b/resume.tex
@@ -4,6 +4,7 @@
 % A4 paper size by default, use 'letterpaper' for US letter
 \documentclass[11pt, a4paper]{russell}
 
+\usepackage{longtable}
 \usepackage{lastpage}
 % Configure page margins with geometry
 % \geometry{left=1.4cm, top=.8cm, right=1.4cm, bottom=1.8cm, footskip=.5cm}
@@ -42,7 +43,7 @@
 % Available options: circle|rectangle,edge/noedge,left/right
 % \photo[rectangle,edge,right]{./examples/profile}
 \name{Wonjun}{Lee}
-\position{Postdoctoral Associate at IMA, UMN}
+\position{Joint NIST-IMA Postdoctoral Associate, UMN}
 \address{Minneapolis, Minnesota}
 
 % \mobile{}
@@ -64,7 +65,6 @@
 % \extrainfo{US Citizen}
 
 % \quote{``Simplicity is deceptively complicated."}
-
 %-------------------------------------------------------------------------------
 \begin{document}
 
