--- a/cv/publications.tex
+++ b/cv/publications.tex
@@ -13,9 +13,11 @@
 % My research focuses on developing fast and accurate algorithms for  optimal transport and the implementations to solve PDEs and real-world problems arising in image processing and machine learning.
 \vspace{0.5cm}
 \begin{cvitems}
+  \item \textbf{W. Lee}, L. Wang, W. Li \href{https://arxiv.org/abs/2311.06700}{\textit{Deep JKO: Time-Implicit Particle Methods For General Nonlinear Gradient Flows}}, Preprint, 2023
+    \medskip
   \item \textbf{W. Lee}, Y. Yang, D. Zou, G. Lerman \href{https://arxiv.org/abs/2311.01375}{\textit{Monotone Generative Modeling via a Gromov-Monge Embedding}}, Preprint, 2023
     \medskip
-  \item J. Calder, \textbf{W. Lee}, \href{https://arxiv.org/abs/2310.08450}{\textit{Monotone discretizations of levelset convex geometric PDEs}}, Preprint, 2023
+  \item J. Calder, \textbf{W. Lee}, \href{https://arxiv.org/abs/2310.08450}{\textit{Monotone Discretizations of Levelset Convex Geometric PDEs}}, Preprint, 2023
     \medskip
   \item \textbf{W. Lee}, S. Liu, W. Li, S. Osher, \href{https://arxiv.org/pdf/2104.11887.pdf}{\textit{Mean Field Control Problems For Vaccine Distribution}}, Research in the Mathematical Sciences, 2022
     \medskip
