--- a/cv/teachingexperience.tex
+++ b/cv/teachingexperience.tex
@@ -9,6 +9,20 @@
 %-------------------------------------------------------------------------------
 \begin{cventries}
 
+  %---------------------------------------------------------
+  \cventry
+    {Instructor} % Job title
+    {University of Minnesota} % Organisation
+    {Minneapolis, MN} % Location
+    {Aug 2022 – Present} % Date(s)
+    {
+      \begin{cvteachings}
+        \cvteaching{Spring 2023}{Math 2243}{Linear Algebra and Differential Equations}
+        \cvteaching{Spring 2024}{Math 2243}{Linear Algebra and Differential Equations}
+      \end{cvteachings}
+    }
+
+    % \vspace{-1cm}
 %---------------------------------------------------------
   \cventry
     {Teaching Assistant} % Job title
