--- a/resume.tex
+++ b/resume.tex
@@ -88,9 +88,13 @@
 \input{cv/academicpositions.tex}
 \input{cv/education.tex}
 \input{cv/achievements.tex}
+
+\pagebreak
 \input{cv/publications.tex}
 \input{cv/presentations.tex}
 \input{cv/teachingexperience.tex}
+
+\pagebreak
 \input{cv/workexperience.tex}
 \input{cv/languages.tex}
 
