--- a/cv/workexperience.tex
+++ b/cv/workexperience.tex
@@ -21,7 +21,7 @@
           \item Developed a fast and accurate algorithm that computes the  solution of the Wasserstein gradient flows on 2D or 3D grids. {\footnotesize (C++)}
           % \item Developed an algorithm for computing the unbalanced optimal transport distance. {\footnotesize (C++)}
           \item Developed a new mean-field control model in controlling the propagation of epidemics in response to COVID pandemic. {\footnotesize (C++)}
-          \item Studied Regularity theory for minimizers of polyconvex functionals related to incompressible / compressible Navier-Stokes equations under Prof. Wilfrid Gangbo.
+          \item Studied Regularity theory for minimizers of polyconvex functionals related to incompressible / compressible Navier-Stokes equations under Prof. Wilfrid Gangbo and Prof. Matt Jacobs.
       \end{cvitems}
     }
 
