--- a/resume.tex
+++ b/resume.tex
@@ -43,8 +43,8 @@
 % Available options: circle|rectangle,edge/noedge,left/right
 % \photo[rectangle,edge,right]{./examples/profile}
 \name{Wonjun}{Lee}
-\position{Joint NIST-IMA Postdoctoral Associate, UMN}
-\address{Minneapolis, Minnesota}
+\position{Joint IMA-NIST Postdoctoral Associate, UMN}
+\address{Minneapolis, MN}
 
 % \mobile{}
 \email{lee01273@umn.edu}
