--- a/cv/presentations.tex
+++ b/cv/presentations.tex
@@ -11,63 +11,88 @@
 \allowdisplaybreaks
 \begin{cvtalks}
 %---------------------------------------------------------
-% \cvtalk
-%     {A Monthly Seminar St The Inria Paris Mokaplan Research, Mokameeting} % Seminar
-%     {Monotone Generative Modeling via a Gromov-Monge Embedding.} % talk subject
-%     {2023} % Date(s)
+
 \cvtalk
-    {Kernel Club, Colorado School of Mines} % Seminar
+    {Workshop on Models and Algorithms for Path Planning (MAPP)} % Seminar
+    {UT Austin}
     {Monotone Generative Modeling via a Gromov-Monge Embedding.} % talk subject
     {2023} % Date(s)
 \cvtalk
-    {ACMD Seminar, National Institute of Standards and Technology (NIST)} % Seminar
+    {Analysis and Probability Seminar}
+    {Iowa State University}
+    {Monotone Generative Modeling via a Gromov-Monge Embedding.}
+    {2023}
+\cvtalk
+    {A Monthly Seminar at The Mokaplan Research, Mokameeting} % Seminar
+    {Inria Paris}
+    {Monotone Generative Modeling via a Gromov-Monge Embedding.} % talk subject
+    {2023} % Date(s)
+\cvtalk
+    {Kernel Club} % Seminar
+    {Colorado School of Mines}
+    {Monotone Generative Modeling via a Gromov-Monge Embedding.} % talk subject
+    {2023} % Date(s)
+\cvtalk
+    {ACMD Seminar} % Seminar
+    {National Institute of Standards and Technology (NIST)}
     {Monotone Generative Modeling via a Gromov-Monge Embedding.} % talk subject
     {2023} % Date(s)
 \cvtalk
     {Workshop on kinetic and optimal transport} % Seminar
+    {University of Minnesota}
     {Deep JKO for general gradien flows.} % talk subject
     {2023} % Date(s)
   \pagebreak
   \cvtalk
     {2023 Algorithms for Threat Detection PI Workshop (Poster session)} % Seminar
+    {Washington D.C.}
     {Monotone generative modeling via Gromov-Monge Embedding.} % talk subject
     {2023} % Date(s)
   \cvtalk
-    {The Level Set Collective II, UCLA} % Seminar
+    {The Level Set Collective II} % Seminar
+    {UCLA}
     {Monotone discretizations of levelset convex geometric PDEs.} % talk subject
     {2023} % Date(s)
   \cvtalk
-    {SIAM Conference on Computational Science and Engineering (CSE23)} % Seminar
+    {SIAM Conference on Computational Science and Engineering } % Seminar
+    {CSE23}
     {Monotone discretizations of levelset convex geometric PDEs.} % talk subject
     {2023} % Date(s)
 
   \cvtalk
-    {IMA Data Science Seminar, UMN} % Seminar
+    {IMA Data Science Seminar} % Seminar
+    {University of Minnesota}
     {The back-forth method for Wasserstein gradient flows.} % talk subject
     {2022} % Date(s)
 
   \cvtalk
-    {Optimal transport and Mean field games Seminar, University of South Carolina} % Seminar
+    {Optimal transport and Mean field games Seminar} % Seminar
+    {University of South Carolina}
     {Mean field control problems for vaccine distribution.} % talk subject
     {2021} % Date(s)
   \cvtalk
-    {Current Literature in Applied Mathematics Seminar, UCLA} % Seminar
+    {Current Literature in Applied Mathematics Seminar} % Seminar
+    {UCLA}
     {The back-forth method for Wasserstein gradient flows.} % talk subject
     {2021} % Date(s)
   \cvtalk
-    {Optimal transport and Mean field games Seminar, University of South Carolina} % Seminar
+    {Optimal transport and Mean field games Seminar} % Seminar
+    {University of South Carolina}
     {The back-forth method for Wasserstein gradient flows.} % talk subject
     {2020} % Date(s)
   \cvtalk
-    {The Level Set Collective, UCLA} % Seminar
+    {The Level Set Collective} % Seminar
+    {UCLA}
     {Numerical Methods and Applications of Optimal Transport.} % talk subject
     {2020} % Date(s)
   \cvtalk
-    {Optimal transport and Mean field games Seminar, UCLA} % Seminar
+    {Optimal transport and Mean field games Seminar} % Seminar
+    {UCLA}
     {Tropical Wasserstein Distances in Phylogenetic Tree Space.} % talk subject
     {2019} % Date(s)
     \cvtalk
-    {Optimal transport and Mean field games Seminar, UCLA} % Seminar
+    {Optimal transport and Mean field games Seminar} % Seminar
+    {UCLA}
     {Energy-efficient Velocity Control for Massive Rotary-Wing UAVs: A Mean Field Game Approach} % talk subject
     {2019} % Date(s)
 \end{cvtalks}
