--- a/cv/presentations.tex
+++ b/cv/presentations.tex
@@ -13,6 +13,16 @@
 %---------------------------------------------------------
 
 \cvtalk
+    {Computational and Applied Math (CAM) Seminar} % Seminar
+    {Georgia Tech}
+    {Monotone Generative Modeling via a Gromov-Monge Embedding.} % talk subject
+    {2024} % Date(s)
+\cvtalk
+    {Applied Math Seminar} % Seminar
+    {UC Santa Barbara}
+    {Monotone Generative Modeling via a Gromov-Monge Embedding.} % talk subject
+    {2024} % Date(s)
+\cvtalk
     {Workshop on Models and Algorithms for Path Planning (MAPP)} % Seminar
     {UT Austin}
     {Monotone Generative Modeling via a Gromov-Monge Embedding.} % talk subject
@@ -32,6 +42,8 @@
     {Colorado School of Mines}
     {Monotone Generative Modeling via a Gromov-Monge Embedding.} % talk subject
     {2023} % Date(s)
+
+    \pagebreak
 \cvtalk
     {ACMD Seminar} % Seminar
     {National Institute of Standards and Technology (NIST)}
@@ -42,7 +54,7 @@
     {University of Minnesota}
     {Deep JKO for general gradien flows.} % talk subject
     {2023} % Date(s)
-  \pagebreak
+  
   \cvtalk
     {2023 Algorithms for Threat Detection PI Workshop (Poster session)} % Seminar
     {Washington D.C.}
