--- a/cv/presentations.tex
+++ b/cv/presentations.tex
@@ -13,6 +13,16 @@
 %---------------------------------------------------------
 
 \cvtalk
+    {\textbf{Upcoming}: SIAM Conference on Mathematics of Data Science (MDS24) 2024} % Seminar
+    {Atlanta Georgia}
+    {Understanding Contrastive Learning from Variational and Neural Network Optimization Perspectives} % talk subject
+    {2024} % Date(s)
+\cvtalk
+    {SIAM Annual Meeting (SIAM AN24) 2024} % Seminar
+    {Spokane, Washington}
+    {Geometry-preserving encoder and decoder on latent diffusion models} % talk subject
+    {2024} % Date(s)
+\cvtalk
     {Computational and Applied Math (CAM) Seminar} % Seminar
     {Georgia Tech}
     {Monotone Generative Modeling via a Gromov-Monge Embedding.} % talk subject
@@ -43,7 +53,7 @@
     {Monotone Generative Modeling via a Gromov-Monge Embedding.} % talk subject
     {2023} % Date(s)
 
-    \pagebreak
+    % \pagebreak
 \cvtalk
     {ACMD Seminar} % Seminar
     {National Institute of Standards and Technology (NIST)}
