--- a/resume.tex
+++ b/resume.tex
@@ -94,9 +94,13 @@
 \input{cv/presentations.tex}
 \input{cv/teachingexperience.tex}
 
-\pagebreak
+% \pagebreak
 \input{cv/workexperience.tex}
 \input{cv/languages.tex}
+
+\medskip
+
+\input{cv/service.tex}
 
 % \vspace*{\fill}
 % \centering{\textbf{References available upon request.}}
