--- a/cv/teachingexperience.tex
+++ b/cv/teachingexperience.tex
@@ -3,7 +3,8 @@
 %-------------------------------------------------------------------------------
 \cvsection{Teaching Experience}
 
-
+\begingroup
+\allowdisplaybreaks
 %-------------------------------------------------------------------------------
 %   CONTENT
 %-------------------------------------------------------------------------------
@@ -17,13 +18,18 @@
     {Aug 2022 – Present} % Date(s)
     {
       \begin{cvteachings}
+        \cvteaching{Summer 2024}{Summer School}{Machine Learning Summer Camp for high school students}
         \cvteaching{Spring 2024}{Math 2243}{Linear Algebra and Differential Equations}
+        \cvteaching{Summer 2023}{Summer School}{Machine Learning Summer Camp for high school students}
+        \cvteaching{Summer 2023}{Summer School}{Random Structures in Optimizations and Related Applications}
         \cvteaching{Spring 2023}{Math 2243}{Linear Algebra and Differential Equations}
       \end{cvteachings}
     }
 
     % \vspace{-1cm}
 %---------------------------------------------------------
+\begingroup
+\allowdisplaybreaks
   \cventry
     {Teaching Assistant} % Job title
     {University of California, Los Angeles} % Organisation
@@ -37,6 +43,7 @@
         \item {Math 151B: Applied numerical methods with analysis of algorithms and computer implementations}.
       \end{cvitems}
     }
+\endgroup
 %---------------------------------------------------------
 
   \cventry
@@ -53,3 +60,4 @@
 
 %---------------------------------------------------------
 \end{cventries}
+\endgroup
