--- a/resume.tex
+++ b/resume.tex
@@ -94,13 +94,12 @@
 \input{cv/presentations.tex}
 \input{cv/teachingexperience.tex}
 
-% \pagebreak
+\pagebreak
 \input{cv/workexperience.tex}
-\input{cv/languages.tex}
-
-\medskip
 
 \input{cv/service.tex}
+
+\input{cv/languages.tex}
 
 % \vspace*{\fill}
 % \centering{\textbf{References available upon request.}}
