--- a/cv/presentations.tex
+++ b/cv/presentations.tex
@@ -13,12 +13,12 @@
 %---------------------------------------------------------
 
 \cvtalk
-    {\textbf{Upcoming}: SIAM Conference on Mathematics of Data Science (MDS24) 2024} % Seminar
+    {\textbf{Upcoming}: SIAM Conference on Mathematics of Data Science (MDS24)} % Seminar
     {Atlanta Georgia}
     {Understanding Contrastive Learning from Variational and Neural Network Optimization Perspectives} % talk subject
     {2024} % Date(s)
 \cvtalk
-    {SIAM Annual Meeting (SIAM AN24) 2024} % Seminar
+    {SIAM Annual Meeting (SIAM AN24)} % Seminar
     {Spokane, Washington}
     {Geometry-preserving encoder and decoder on latent diffusion models} % talk subject
     {2024} % Date(s)
