--- a/cv/achievements.tex
+++ b/cv/achievements.tex
@@ -12,7 +12,7 @@
 
 %---------------------------------------------------------
   \cvhonor
-    {{Rising Star in Data Science from the University of Chicago.} \href{https://datascience.uchicago.edu/rising-stars/\#rising-stars-profiles-2/}{\linkstyle{Profile Link.} }} % Award
+    {{Rising Star in Data Science from the University of Chicago.} \href{https://datascience.uchicago.edu/research/postdoctoral-programs/rising-stars/2022/}{\linkstyle{Profile Link.} }} % Award
     {2022} % Date(s)
   \cvhonor
     {UCLA Dissertation Year Fellowship ($\$ 20,000$)} % Award
