--- a/cv/education.tex
+++ b/cv/education.tex
@@ -28,7 +28,7 @@
     {Fairfax, Virginia} % Location
     {May 2015} % Date(s)
     {\begin{cvitems} % Description(s) bullet points
-      \item Concentration in Applied Mathematics and Mathematical Statistics
+      \item Concentration in Applied Mathematics and Mathematical Statistics.
       \item GPA: 3.84/4.0 \textit{magna cum laude}, Phi Beta Kappa.
     \end{cvitems}
     }
