--- a/cv/presentations.tex
+++ b/cv/presentations.tex
@@ -13,9 +13,19 @@
 %---------------------------------------------------------
 
 \cvtalk
+    {\textbf{Upcoming}: UMTC-UMD Postdoc Seminar Program} % Seminar
+    {UMD}
+    {Understanding Contrastive Learning from Variational and Neural Network Optimization Perspectives} % talk subject
+    {2024} % Date(s)
+% \cvtalk
+%     {\textbf{Upcoming}: (Poster) SIAM Conference on Mathematics of Data Science (MDS24)} % Seminar
+%     {Atlanta Georgia}
+%     {Geometry-preserving encoder and decoder on latent diffusion models} % talk subject
+%     {2024} % Date(s)
+\cvtalk
     {\textbf{Upcoming}: SIAM Conference on Mathematics of Data Science (MDS24)} % Seminar
     {Atlanta Georgia}
-    {Understanding Contrastive Learning from Variational and Neural Network Optimization Perspectives} % talk subject
+    { Understanding Contrastive Learning from Variational and Neural Network Optimization Perspectives} % talk subject
     {2024} % Date(s)
 \cvtalk
     {SIAM Annual Meeting (SIAM AN24)} % Seminar
