--- a/cv/publications.tex
+++ b/cv/publications.tex
@@ -13,6 +13,14 @@
 % My research focuses on developing fast and accurate algorithms for  optimal transport and the implementations to solve PDEs and real-world problems arising in image processing and machine learning.
 \vspace{0.5cm}
 \begin{cvitems}
+  \item \textbf{W. Lee}, L. Wang, W. Li \href{}{\textit{Generalized Deep JKO: an IMEX particle method for kinetic Fokker-Planck equations}}, \textbf{Ongoing}
+  \medskip
+  \item \textbf{W. Lee}, R. O'Neill, D. Zou, J. Calder, G. Lerman \href{}{\textit{Geometry-Preserving Encoder/Decoder\\ In Latent Generative Models}}, \textbf{Ongoing}
+  \medskip
+  \item J. Calder, \textbf{W. Lee} \href{}{\textit{Understanding Contrastive Learning through Variational Analysis and Neural Network Optimization Perspectives}}, \textbf{Ongoing}
+    \medskip
+  \item M. Jacobs, \textbf{W. Lee} \href{}{\textit{An efficient numerical scheme for tumor growth models}}, \textbf{Ongoing}
+    \medskip
   \item Y. Yang, \textbf{W. Lee}, D. Zou, G. Lerman \href{http://arxiv.org/abs/2407.10495}{\textit{Improving Hyperbolic Representations via Gromov-Wasserstein Regularization}}, ECCV, 2024
     \medskip
   \item \textbf{W. Lee}, L. Wang, W. Li \href{https://arxiv.org/abs/2311.06700}{\textit{Deep JKO: Time-Implicit Particle Methods For General Nonlinear Gradient Flows}}, Journal of Computational Physics, 2024
