--- a/cv/workexperience.tex
+++ b/cv/workexperience.tex
@@ -18,7 +18,7 @@
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
         \item Developing a new algorithm to compute the Wasserstein distance between large point clouds. Applications in machine learning models such as generative adversarial networks (GAN). {\footnotesize (PyTorch, C++)}
-          \item Developed a fast and accurate algorithm that computes the  solution of the Wasserstein gradient flows on 2D or 3D grids. {\footnotesize (C++)}
+          \item Developed a fast and accurate algorithm for the Wasserstein gradient flows on 2D or 3D grids. {\footnotesize (C++)}
           % \item Developed an algorithm for computing the unbalanced optimal transport distance. {\footnotesize (C++)}
           \item Developed a new mean-field control model in controlling the propagation of epidemics in response to COVID pandemic. {\footnotesize (C++)}
           \item Studied Regularity theory for minimizers of polyconvex functionals related to incompressible / compressible Navier-Stokes equations under Prof. Wilfrid Gangbo and Prof. Matt Jacobs.
