--- a/resume.tex
+++ b/resume.tex
@@ -51,7 +51,7 @@
 %\dateofbirth{January 1st, 1970}
 \homepage{wonjunee.github.io} 
 \github{github.com/wonjunee}
-\linkedin{www.linkedin.com/in/wonjun-lee}
+\linkedin{linkedin.com/in/wonjun-lee}
 % \gitlab{gitlab-id}
 % \stackoverflow{SO-id}{SO-name}
 % \twitter{@twit}
@@ -61,7 +61,7 @@
 % \kaggle{kaggle-id}
 % \googlescholar{googlescholar-id}{name-to-display}
 % \firstname and \lastname will be used
-\googlescholar{https://scholar.google.com/citations?user=fa6XeLsAAAAJ&hl=en}{Google Scholar}
+\googlescholar{https://scholar.google.ru/citations?hl=en&user=fa6XeLsAAAAJ}{Google Scholar}
 % \extrainfo{US Citizen}
 
 % \quote{``Simplicity is deceptively complicated."}
@@ -91,13 +91,15 @@
 
 \pagebreak
 \input{cv/publications.tex}
-\input{cv/presentations.tex}
-\input{cv/teachingexperience.tex}
 
 \pagebreak
+\input{cv/presentations.tex}
+\input{cv/teachingexperience.tex}
 \input{cv/workexperience.tex}
 
 \input{cv/service.tex}
+
+\vspace{-0.5cm}
 
 \input{cv/languages.tex}
 
