--- a/cv/service.tex
+++ b/cv/service.tex
@@ -8,7 +8,7 @@
 % CONTENT
 %-------------------------------------------------------------------------------
 \begingroup
-\allowdisplaybreaks
+% \allowdisplaybreaks
 \begin{cvtalks}
 %---------------------------------------------------------
 
