--- a/cv/summary.tex
+++ b/cv/summary.tex
@@ -14,6 +14,6 @@
 
 My research focuses on developing partial differential equations (PDE)-based algorithms to solve high-dimensional machine learning problems and analyze the theoretical properties of the algorithms.
 
-Machine learning, generative modeling, optimal transport, gradient flows, mean field games.
+Machine learning, generative modeling, constrastive learning, optimal transport, gradient flows, mean field games.
 
 \end{cvparagraph}
