--- a/cv/service.tex
+++ b/cv/service.tex
@@ -9,14 +9,13 @@
 %-------------------------------------------------------------------------------
 \begingroup
 % \allowdisplaybreaks
-\begin{cvtalks}
+\begin{cvservices}
 %---------------------------------------------------------
 
-\cvtalk
+\cvservice
     {Co-organized a minisymposium 'Theory and Applications of Optimal Transport in Machine Learning' with Jeff Calder} % Seminar
     {SIAM Annual Meeting 2024}
-    {Understanding Contrastive Learning from Variational and Neural Network Optimization Perspectives} % talk subject
     {2024} % Date(s)
-\end{cvtalks}
+\end{cvservices}
 \endgroup
 
