--- a/cv/teachingexperience.tex
+++ b/cv/teachingexperience.tex
@@ -3,8 +3,8 @@
 %-------------------------------------------------------------------------------
 \cvsection{Teaching Experience}
 
-\begingroup
-\allowdisplaybreaks
+% \begingroup
+% \allowdisplaybreaks
 %-------------------------------------------------------------------------------
 %   CONTENT
 %-------------------------------------------------------------------------------
@@ -19,12 +19,24 @@
     {Aug 2022 – Present} % Date(s)
     {
       \begin{cvteachings}
+        \cvteaching{Fall 2024}{Math 2243}{Linear Algebra and Differential Equations}
         \cvteaching{Summer 2024}{Summer School}{Machine Learning Summer Camp for high school students}
         \cvteaching{Spring 2024}{Math 2243}{Linear Algebra and Differential Equations}
         \cvteaching{Summer 2023}{Summer School}{Machine Learning Summer Camp for high school students}
         \cvteaching{Summer 2023}{Summer School}{Random Structures in Optimizations and Related Applications}
         \cvteaching{Spring 2023}{Math 2243}{Linear Algebra and Differential Equations}
       \end{cvteachings}
+    }
+    \cventry
+    {Mentor from Directed Reading Program (DRP)} % Job title
+    {University of Minnesota} % Organisation
+    {Minneapolis, MN} % Location
+    {Aug 2023 - May 2024} % Date(s)
+    {
+      \begin{cvitems} % Description(s) of tasks/responsibilities
+        \item Mentoring undergraduate students for the quarter-long independent study project in math.
+        \item Topics: survey of optimization methods and their applications in neural newtorks.
+      \end{cvitems}
     }
 
     % \vspace{-1cm}
@@ -53,10 +65,10 @@
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
         \item Mentoring undergraduate students for the quarter-long independent study project in math.
-        \item Topics: Unsupervised learning of image segmentation, Generative Adversarial Networks, Applications of mean field games in finance.
+        \item Topics: unsupervised learning of image segmentation, generative adversarial networks, applications of mean field games in finance.
       \end{cvitems}
     }
 
 %---------------------------------------------------------
 \end{cventries}
-\endgroup
+% \endgroup
