--- a/resume.tex
+++ b/resume.tex
@@ -88,18 +88,20 @@
 \input{cv/academicpositions.tex}
 \input{cv/education.tex}
 \input{cv/achievements.tex}
-
-\pagebreak
 \input{cv/publications.tex}
 
-\pagebreak
-\input{cv/presentations.tex}
-\input{cv/teachingexperience.tex}
-\input{cv/workexperience.tex}
+\newpage
 
+\input{cv/presentations.tex}
+
+\input{cv/teachingexperience.tex}
 \input{cv/service.tex}
 
-\vspace{-0.5cm}
+\newpage
+
+\input{cv/workexperience.tex}
+
+% \vspace{-0.5cm}
 
 \input{cv/languages.tex}
 
