--- a/cv/academicpositions.tex
+++ b/cv/academicpositions.tex
@@ -18,7 +18,7 @@
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
         \item {A joint NIST-IMA Postdoctoral Fellowship in Analysis of Machine Learning at the Institute for Mathematics and its Applications (IMA) in the College of Science and Engineering at the University of Minnesota (UMN).}
-        \item {Working on machine learning projects with Prof. Jeff Calder, Prof. Gilad Lerman, and Prof. Li Wang.}
+        \item {Working on machine learning research with Prof. Jeff Calder, Prof. Gilad Lerman, and Prof. Li Wang.}
       \end{cvitems}
     }
 
