--- a/cv/languages.tex
+++ b/cv/languages.tex
@@ -1,7 +1,7 @@
 %-------------------------------------------------------------------------------
 %	SECTION TITLE
 %-------------------------------------------------------------------------------
-\cvsection{Skills}
+\cvsection{Skills and Hobbies}
 
 %-------------------------------------------------------------------------------
 %	CONTENT
@@ -17,5 +17,9 @@
   \cvskill
     {Language} % Language
     {English, Korean} % Type
+
+    \cvskill
+    {Hobbies} % Language
+    {Movies and video games} % Type
 
 \end{cvskills}
