--- a/cv/presentations.tex
+++ b/cv/presentations.tex
@@ -7,8 +7,8 @@
 %-------------------------------------------------------------------------------
 % CONTENT
 %-------------------------------------------------------------------------------
-\begingroup
-\allowdisplaybreaks
+% \begingroup
+% \allowdisplaybreaks
 \begin{cvtalks}
 %---------------------------------------------------------
 
@@ -17,11 +17,11 @@
     {UMD}
     {Understanding Contrastive Learning from Variational and Neural Network Optimization Perspectives} % talk subject
     {2024} % Date(s)
-% \cvtalk
-%     {\textbf{Upcoming}: (Poster) SIAM Conference on Mathematics of Data Science (MDS24)} % Seminar
-%     {Atlanta Georgia}
-%     {Geometry-preserving encoder and decoder on latent diffusion models} % talk subject
-%     {2024} % Date(s)
+\cvtalk
+    {\textbf{Upcoming}: (Poster) SIAM Conference on Mathematics of Data Science (MDS24)} % Seminar
+    {Atlanta Georgia}
+    {Geometry-preserving encoder and decoder on latent diffusion models} % talk subject
+    {2024} % Date(s)
 \cvtalk
     {\textbf{Upcoming}: SIAM Conference on Mathematics of Data Science (MDS24)} % Seminar
     {Atlanta Georgia}
@@ -50,7 +50,7 @@
 \cvtalk
     {Analysis and Probability Seminar}
     {Iowa State University}
-    {Monotone Generative Modeling via a Gromov-Monge Embedding.}
+    {Monotone discretizations of levelset convex geometric PDEs.}
     {2023}
 \cvtalk
     {A Monthly Seminar at The Mokaplan Research, Mokameeting} % Seminar
@@ -72,7 +72,7 @@
 \cvtalk
     {Workshop on kinetic and optimal transport} % Seminar
     {University of Minnesota}
-    {Deep JKO for general gradien flows.} % talk subject
+    {Deep JKO for general gradient flows.} % talk subject
     {2023} % Date(s)
   
   \cvtalk
@@ -128,5 +128,5 @@
     {Energy-efficient Velocity Control for Massive Rotary-Wing UAVs: A Mean Field Game Approach} % talk subject
     {2019} % Date(s)
 \end{cvtalks}
-\endgroup
+% \endgroup
 
