--- a/resume.tex
+++ b/resume.tex
@@ -90,17 +90,15 @@
 \input{cv/achievements.tex}
 \input{cv/publications.tex}
 
-\newpage
-
-\input{cv/presentations.tex}
 
 \input{cv/teachingexperience.tex}
 \input{cv/service.tex}
 
-\newpage
+% \newpage
 
 \input{cv/workexperience.tex}
 
+\input{cv/presentations.tex}
 % \vspace{-0.5cm}
 
 \input{cv/languages.tex}
