--- a/cv/publications.tex
+++ b/cv/publications.tex
@@ -13,23 +13,23 @@
 % My research focuses on developing fast and accurate algorithms for  optimal transport and the implementations to solve PDEs and real-world problems arising in image processing and machine learning.
 \vspace{0.5cm}
 \begin{cvitems}
-  \item J. Calder, \textbf{W. Lee}, A.M. Neuman \href{}{\textit{Spectral convergence rate on graph $p$-Laplacian}}, \textbf{In preparation}
+  \item J. Calder, \textbf{W. Lee}, A.M. Neuman, \href{}{\textit{Spectral convergence rate of the graph $p$-Laplacian on a manifold with boundary}}, \textbf{In preparation}
     \medskip
-  \item \textbf{W. Lee}, L. Wang, W. Li \href{}{\textit{Generalized Deep JKO: an IMEX particle method for kinetic Fokker-Planck equations}}, \textbf{In preparation}
+  \item \textbf{W. Lee}, L. Wang, W. Li, \href{}{\textit{Generalized Deep JKO: an IMEX particle method for kinetic Fokker-Planck equations}}, \textbf{In preparation}
   \medskip
-  \item \textbf{W. Lee}, R. O'Neill, D. Zou, J. Calder, G. Lerman \href{}{\textit{Geometry-Preserving Encoder/Decoder\\ In Latent Generative Models}}, \textbf{In preparation}
+  \item \textbf{W. Lee}, R. O'Neill, D. Zou, J. Calder, G. Lerman, \href{}{\textit{Geometry-Preserving Encoder/Decoder\\ In Latent Generative Models}}, \textbf{In preparation}
   \medskip
-  \item M. Jacobs, \textbf{W. Lee} \href{}{\textit{An efficient numerical scheme for tumor growth models}}, \textbf{In preparation}
+  \item M. Jacobs, \textbf{W. Lee}, \href{}{\textit{An efficient numerical scheme for tumor growth models}}, \textbf{In preparation}
     \medskip
-  \item J. Calder, \textbf{W. Lee} \href{}{\textit{Understanding Contrastive Learning through Variational Analysis and Neural Network Optimization Perspectives}}, \textbf{Submitted}
+  \item J. Calder, \textbf{W. Lee}, \href{}{\textit{Understanding Contrastive Learning through Variational Analysis and Neural Network Optimization Perspectives}}, \textbf{Submitted}
     \medskip
   \item J. Calder, \textbf{W. Lee}, \href{https://arxiv.org/abs/2310.08450}{\textit{Monotone Discretizations of Levelset Convex Geometric PDEs}}, Numerische Mathematik, 2024
     \medskip
-  \item Y. Yang, \textbf{W. Lee}, D. Zou, G. Lerman \href{http://arxiv.org/abs/2407.10495}{\textit{Improving Hyperbolic Representations via Gromov-Wasserstein Regularization}}, ECCV, 2024
+  \item Y. Yang, \textbf{W. Lee}, D. Zou, G. Lerman, \href{http://arxiv.org/abs/2407.10495}{\textit{Improving Hyperbolic Representations via Gromov-Wasserstein Regularization}}, ECCV, 2024
     \medskip
-  \item \textbf{W. Lee}, L. Wang, W. Li \href{https://arxiv.org/abs/2311.06700}{\textit{Deep JKO: Time-Implicit Particle Methods For General Nonlinear Gradient Flows}}, Journal of Computational Physics, 2024
+  \item \textbf{W. Lee}, L. Wang, W. Li, \href{https://arxiv.org/abs/2311.06700}{\textit{Deep JKO: Time-Implicit Particle Methods For General Nonlinear Gradient Flows}}, Journal of Computational Physics, 2024
     \medskip
-  \item \textbf{W. Lee}, Y. Yang, D. Zou, G. Lerman \href{https://arxiv.org/abs/2311.01375}{\textit{Monotone Generative Modeling via a Gromov-Monge Embedding}}, Preprint, 2023
+  \item \textbf{W. Lee}, Y. Yang, D. Zou, G. Lerman, \href{https://arxiv.org/abs/2311.01375}{\textit{Monotone Generative Modeling via a Gromov-Monge Embedding}}, Preprint, 2023
     \medskip
   \item \textbf{W. Lee}, S. Liu, W. Li, S. Osher, \href{https://arxiv.org/pdf/2104.11887.pdf}{\textit{Mean Field Control Problems For Vaccine Distribution}}, Research in the Mathematical Sciences, 2022
     \medskip
@@ -41,11 +41,11 @@
     \medskip
     \item \textbf{W. Lee}, W. Li, B. Lin, A. Monod, \href{https://arxiv.org/pdf/1911.05401v1.pdf}{\textit{Tropical Optimal Transport and Wasserstein Distances in Phylogenetic Tree Space}}, {Information Geometry}, 2021
     \medskip
-    \item M. Jacobs, \textbf{W. Lee}, F. Léger \href{https://arxiv.org/pdf/2011.08151}{\textit{The back-and-forth method for Wasserstein gradient flows}}, {ESAIM: COCV}, 27:28, 2021.
+    \item M. Jacobs, \textbf{W. Lee}, F. Léger, \href{https://arxiv.org/pdf/2011.08151}{\textit{The back-and-forth method for Wasserstein gradient flows}}, {ESAIM: COCV}, 27:28, 2021.
     \medskip
-    \item \textbf{W. Lee}, S. Liu, H. Tembine, W.C. Li, S. Osher. \href{https://www.researchgate.net/publication/341804278_Controlling_Propagation_of_epidemics_via_mean-field_games}{\textit{Controlling propagation of epidemics via mean-field games}}, {SIAM Journal on Applied Math}, 2020
+    \item \textbf{W. Lee}, S. Liu, H. Tembine, W.C. Li, S. Osher., \href{https://www.researchgate.net/publication/341804278_Controlling_Propagation_of_epidemics_via_mean-field_games}{\textit{Controlling propagation of epidemics via mean-field games}}, {SIAM Journal on Applied Math}, 2020
     \medskip
-    \item \textbf{W. Lee}, R.J. Lai, W. Li, S. Osher. \href{https://www.researchgate.net/publication/338990122_Generalized_Unnormalized_Optimal_Transport_and_its_fast_algorithms}{\textit{Generalized unnormalized optimal transport and its fast algorithms}}, {Journal of Computational Physics}, 2020
+    \item \textbf{W. Lee}, R.J. Lai, W. Li, S. Osher., \href{https://www.researchgate.net/publication/338990122_Generalized_Unnormalized_Optimal_Transport_and_its_fast_algorithms}{\textit{Generalized unnormalized optimal transport and its fast algorithms}}, {Journal of Computational Physics}, 2020
     \medskip
     \item H. Gao, \textbf{W. Lee}, W. Li, Z. Han, S. Osher, and H. V. Poor, \href{ftp://ftp.math.ucla.edu/pub/camreport/cam19-57.pdf}{\textit{Energy-efficient Velocity Control for Massive Rotary-Wing UAVs: A Mean Field Game Approach}}, {IEEE Globecom}, 2020.
     \medskip
