--- a/cv/service.tex
+++ b/cv/service.tex
@@ -1,7 +1,7 @@
 %-------------------------------------------------------------------------------
 % SECTION TITLE
 %-------------------------------------------------------------------------------
-\cvsection{Service}
+\cvsection{Service and Outreach}
 
 
 %-------------------------------------------------------------------------------
@@ -10,12 +10,16 @@
 \begingroup
 % \allowdisplaybreaks
 \begin{cvservices}
-%---------------------------------------------------------
-
-\cvservice
-    {Co-organized a minisymposium 'Theory and Applications of Optimal Transport in Machine Learning' with Jeff Calder} % Seminar
-    {SIAM Annual Meeting 2024}
-    {2024} % Date(s)
-\end{cvservices}
+    %---------------------------------------------------------
+    \cvservice
+        {Ambassador for the University of Minnesota's Data Science Initiative (DSI)} % Seminar
+        {UMN DSI}
+        {2024} % Date(s)
+    \cvservice
+        {Co-organizer of the minisymposium 'Theory and Applications of Optimal Transport in Machine Learning' with Jeff Calder} % Seminar
+        {SIAM Annual Meeting 2024}
+        {2024} % Date(s)
+    \end{cvservices}
+    
 \endgroup
 
