--- a/russell.cls
+++ b/russell.cls
@@ -772,7 +772,7 @@
 
 \newcommand*{\cvtalk}[4]{%
   % \honordatestyle{#4} & \honortitlestyle{#1}, \talklocationstyle{#2}\\
-  \honordatestyle{#4} & \talktitlestyle{#3}, \honortitlestyle{#1},  \talklocationstyle{#2}\\
+  \honordatestyle{#4} & \honortitlestyle{#1},  \talktitlestyle{#3}, \talklocationstyle{#2}\\
 }
 
 
