--- a/cv/publications.tex
+++ b/cv/publications.tex
@@ -23,13 +23,13 @@
     \medskip
   \item J. Calder, \textbf{W. Lee}, \href{}{\textit{Understanding Contrastive Learning through Variational Analysis and Neural Network Optimization Perspectives}}, \textbf{Submitted}
     \medskip
+  \item \textbf{W. Lee}, Y. Yang, D. Zou, G. Lerman, \href{https://arxiv.org/abs/2311.01375}{\textit{Monotone Generative Modeling via a Gromov-Monge Embedding}}, {\bf Under review} at SIAM Journal on Mathematics of Data Science
+    \medskip
   \item J. Calder, \textbf{W. Lee}, \href{https://arxiv.org/abs/2310.08450}{\textit{Monotone Discretizations of Levelset Convex Geometric PDEs}}, Numerische Mathematik, 2024
     \medskip
   \item Y. Yang, \textbf{W. Lee}, D. Zou, G. Lerman, \href{http://arxiv.org/abs/2407.10495}{\textit{Improving Hyperbolic Representations via Gromov-Wasserstein Regularization}}, ECCV, 2024
     \medskip
   \item \textbf{W. Lee}, L. Wang, W. Li, \href{https://arxiv.org/abs/2311.06700}{\textit{Deep JKO: Time-Implicit Particle Methods For General Nonlinear Gradient Flows}}, Journal of Computational Physics, 2024
-    \medskip
-  \item \textbf{W. Lee}, Y. Yang, D. Zou, G. Lerman, \href{https://arxiv.org/abs/2311.01375}{\textit{Monotone Generative Modeling via a Gromov-Monge Embedding}}, Preprint, 2023
     \medskip
   \item \textbf{W. Lee}, S. Liu, W. Li, S. Osher, \href{https://arxiv.org/pdf/2104.11887.pdf}{\textit{Mean Field Control Problems For Vaccine Distribution}}, Research in the Mathematical Sciences, 2022
     \medskip
