--- a/cv/publications.tex
+++ b/cv/publications.tex
@@ -17,7 +17,7 @@
     \medskip
   \item \textbf{W. Lee}, L. Wang, W. Li, \href{}{\textit{Generalized Deep JKO: an IMEX particle method for kinetic Fokker-Planck equations}}, \textbf{In preparation}
   \medskip
-  \item \textbf{W. Lee}, R. O'Neill, D. Zou, J. Calder, G. Lerman, \href{}{\textit{Geometry-Preserving Encoder/Decoder\\ In Latent Generative Models}}, \textbf{In preparation}
+  \item \textbf{W. Lee}, R. O'Neill, D. Zou, J. Calder, G. Lerman, \href{}{\textit{Geometry-Preserving Encoder/Decoder In Latent Generative Models}}, \textbf{In preparation}
   \medskip
   \item M. Jacobs, \textbf{W. Lee}, \href{}{\textit{An efficient numerical scheme for tumor growth models}}, \textbf{In preparation}
     \medskip
@@ -25,7 +25,7 @@
     \medskip
   \item \textbf{W. Lee}, Y. Yang, D. Zou, G. Lerman, \href{https://arxiv.org/abs/2311.01375}{\textit{Monotone Generative Modeling via a Gromov-Monge Embedding}}, {\bf Under review} at SIAM Journal on Mathematics of Data Science
     \medskip
-  \item J. Calder, \textbf{W. Lee}, \href{https://arxiv.org/abs/2310.08450}{\textit{Monotone Discretizations of Levelset Convex Geometric PDEs}}, Numerische Mathematik, 2024
+  \item J. Calder, \textbf{W. Lee}, \href{https://rdcu.be/dZfbw}{\textit{Monotone Discretizations of Levelset Convex Geometric PDEs}}, Numerische Mathematik, 2024
     \medskip
   \item Y. Yang, \textbf{W. Lee}, D. Zou, G. Lerman, \href{http://arxiv.org/abs/2407.10495}{\textit{Improving Hyperbolic Representations via Gromov-Wasserstein Regularization}}, ECCV, 2024
     \medskip
