--- a/cv/presentations.tex
+++ b/cv/presentations.tex
@@ -13,9 +13,9 @@
 %---------------------------------------------------------
 
 \cvtalk
-    {\textbf{Upcoming}: UMTC-UMD Postdoc Seminar Program} % Seminar
-    {UMD}
-    {Geometry-preserving encoder and decoder on latent diffusion models} % talk subject
+    {UMTC-UMD Postdoc Seminar Program} % Seminar
+    {University of Minnesota, Duluth}
+    {Understanding Contrastive Learning from Variational and Neural Network Optimization Perspectives} % talk subject
     {2024} % Date(s)
 \cvtalk
     {(Poster) SIAM Conference on Mathematics of Data Science (MDS24)} % Seminar
