--- a/cv/presentations.tex
+++ b/cv/presentations.tex
@@ -32,6 +32,11 @@
     {Spokane, Washington}
     {Geometry-preserving encoder and decoder on latent diffusion models} % talk subject
     {2024} % Date(s)
+  \cvtalk
+    {SE Machine Learning and Data Science Seminar} % Seminar
+    {University of Vienna}
+    {Monotone Generative Modeling via a Gromov-Monge Embedding.} % talk subject
+    {2024} % Date(s) 4/17
 \cvtalk
     {Computational and Applied Math (CAM) Seminar} % Seminar
     {Georgia Tech}
