--- a/cv/publications.tex
+++ b/cv/publications.tex
@@ -21,7 +21,7 @@
   \medskip
   \item M. Jacobs, \textbf{W. Lee}, \href{}{\textit{An efficient numerical scheme for tumor growth models}}, \textbf{In preparation}
     \medskip
-  \item J. Calder, \textbf{W. Lee}, \href{}{\textit{Understanding Contrastive Learning through Variational Analysis and Neural Network Optimization Perspectives}}, \textbf{Submitted}
+  \item J. Calder, \textbf{W. Lee}, \href{https://openreview.net/pdf?id=qjoDJjVZxB}{\textit{Understanding Contrastive Learning through Variational Analysis and Neural Network Optimization Perspectives}}, \textbf{Submitted}
     \medskip
   \item \textbf{W. Lee}, Y. Yang, D. Zou, G. Lerman, \href{https://arxiv.org/abs/2311.01375}{\textit{Monotone Generative Modeling via a Gromov-Monge Embedding}}, submitted to SIAM Journal on Mathematics of Data Science, {\bf Under revision}
     \medskip
