--- a/cv/publications.tex
+++ b/cv/publications.tex
@@ -17,9 +17,9 @@
     \medskip
   \item \textbf{W. Lee}, L. Wang, W. Li, \href{}{\textit{Generalized Deep JKO: an IMEX particle method for kinetic Fokker-Planck equations}}, \textbf{In preparation}
   \medskip
-  \item \textbf{W. Lee}, R. O'Neill, D. Zou, J. Calder, G. Lerman, \href{}{\textit{Geometry-Preserving Encoder/Decoder In Latent Generative Models}}, \textbf{In preparation}
-  \medskip
   \item M. Jacobs, \textbf{W. Lee}, \href{}{\textit{An efficient numerical scheme for tumor growth models}}, \textbf{In preparation}
+    \medskip
+  \item \textbf{W. Lee}, R. O'Neill, D. Zou, J. Calder, G. Lerman, \href{https://arxiv.org/abs/2501.09876}{\textit{Geometry-Preserving Encoder/Decoder In Latent Generative Models}}, \textbf{Submitted} %preprint 2025 
     \medskip
   \item J. Calder, \textbf{W. Lee}, \href{https://openreview.net/pdf?id=qjoDJjVZxB}{\textit{Understanding Contrastive Learning through Variational Analysis and Neural Network Optimization Perspectives}}, \textbf{Submitted}
     \medskip
