--- a/cv/presentations.tex
+++ b/cv/presentations.tex
@@ -43,6 +43,11 @@
     {Monotone Generative Modeling via a Gromov-Monge Embedding.} % talk subject
     {2024} % Date(s)
 \cvtalk
+    {MDL Collective Seminar}
+    {Iowa State University}
+    {Deep JKO: time-implicit particle methods for general nonlinear gradient flows}
+    {2024}
+\cvtalk
     {Applied Math Seminar} % Seminar
     {UC Santa Barbara}
     {Monotone Generative Modeling via a Gromov-Monge Embedding.} % talk subject
